scroll issue fix major culprit the spons part and global overflow hidden hindered the scrolling in mobile

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,8 +1,9 @@
 .navbar {
     position: fixed;
     top: 0;
-    right: -10px;
-    width: 100vw;
+    right: 0;
+    width: 100%;
+    max-width: 100vw;
     height: 600px;
     z-index: 50;
     transform-origin: 100% 0%;
