--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -53,7 +53,7 @@
     /* Building image - Bottom Center */
     .about-building {
         position: relative;
-        right: -25px;
+        right: 0;
         bottom: auto !important;
         width: 100% !important;
         z-index: 10;
